# ContractReviewAssistant

./: .env.example  .replit  LICENSE  README.md  app.py  main.py  pyproject.toml
agents/: clause_detector_agent.py  redline_suggester_agent.py  risk_analysis_agent.py
attached_assets/: Pasted-Build-a-production-grade-Python-project-named-Contract-Reviewer-Crew-using-the-structure-from-the-C-1748157372678.txt
config/: config.yaml
crew/: crew.py
output/: review_summary_20250525_072521.json  review_summary_20250525_072521.txt  review_summary_20250525_073244.json  review_summary_20250525_073244.txt  review_summary_20250525_073249.json  review_summary_20250525_073249.txt  review_summary_20250525_073606.json  review_summary_20250525_073606.txt  review_summary_20250525_163408.json  review_summary_20250525_163408.txt  review_summary_20250525_164015.json  review_summary_20250525_164015.txt  review_summary_20250525_164337.json  review_summary_20250525_164337.txt  review_summary_20250525_164728.json  review_summary_20250525_164728.txt  review_summary_20250525_165614.json  review_summary_20250525_165614.txt  review_summary_20250525_204149.json  review_summary_20250525_204149.txt  review_summary_20250525_204241.json  review_summary_20250525_204241.txt
sample_data/: sample_contract.txt
tasks/: task.py
templates/: base.html  index.html
utils/: ocr_handler.py  pdf_report_generator.py
