[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.118.0",
    "docx>=0.2.4",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "openai>=1.82.0",
    "pdfplumber>=0.11.6",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "werkzeug>=3.1.3",
]
